syntax = "proto3";

package org.example.grpc;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "people_service.proto";

option java_package = "org.example.grpc";

service KeeperService {
  rpc findAllKeepers(google.protobuf.Empty) returns (AllKeepersResponse) {
  }
  rpc findKeepersByKeeperIdIn(KeepersByKeeperIdInRequest) returns (KeepersByKeeperIdInResponse){
  }
  rpc findKeepersByPersonIdAndGroup_CourseIdIn(KeepersByPersonIdAndGroup_CourseIdInRequest) returns (KeepersByPersonIdAndGroup_CourseIdInResponse) {
  }
}

message AllKeepersResponse {
  message KeeperList {
    repeated PersonWithRating person = 1;
  }
  map<int32, KeeperList> keepersWithCourseIdMap = 1;
}

message KeepersByKeeperIdInRequest {
  repeated int32 keeperIds = 1;
}

message Keeper {
  int32 keeperId = 1;
  int32 courseId = 2;
  int32 personId = 3;
  google.protobuf.Timestamp startDate = 4;
}

message KeepersByKeeperIdInResponse {
  repeated Keeper keepers = 1;
}

message KeepersByPersonIdAndGroup_CourseIdInRequest {
  int32 personId = 1;
  repeated int32 courseIds = 2;
}

message KeepersByPersonIdAndGroup_CourseIdInResponse {
  map<int32, Keeper> keepersWithCourseIdMap = 1;
}
